--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "react-scripts": "1.1.0",
     "react-selectable-fast": "^2.0.10",
     "react-simplemde-editor": "^3.6.11",
+    "react-tooltip": "^3.4.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
+    "uuid": "^3.2.1",
     "validator": "^9.4.0"
   },
   "scripts": {
